--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@ crashlytics-build.properties
 Assets/GUI Kit Casual Game/
 Assets/FlatKit/
 Assets/Behavior Designer/
+Assets/Epic Toon FX/
+Assets/Handpainted_Grass_and_Ground_Textures/
