--- a/.gitignore
+++ b/.gitignore
@@ -14,6 +14,7 @@
 /*.csproj
 /.vscode/
 /.vs/
+/Recordings/
 
 # Asset meta data should only be ignored when the corresponding asset is also ignored
 !/[Aa]ssets/**/*.meta
